# zksync-telemetry

./: Cargo.toml  Example.md  README.md  notes.txt
src/: config.rs  error.rs  keys.rs  lib.rs  telemetry.rs  utils.rs
